--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -235,28 +235,6 @@ Resources:
                   }
               RunOrder: 3
 
-            - Name: UpdateECSStack
-              ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Provider: CloudFormation
-                Version: '1'
-              InputArtifacts:
-                - Name: SourceCodeOutputArtifact
-              Configuration:
-                ActionMode: CHANGE_SET_REPLACE
-                Capabilities: CAPABILITY_NAMED_IAM
-                RoleArn: !GetAtt CloudFormationRole.Arn
-                StackName: !Sub ${AppName}-${Environment}-ecs
-                ChangeSetName: ecschangeset
-                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/ecs.yaml
-                ParameterOverrides: !Sub |
-                  {
-                    "Environment": "${Environment}",
-                    "AppName" : "${AppName}"
-                  }
-              RunOrder: 3
-
         - Name: Execute
           Actions:
             - Name: ExecutePipelineChangeSet
@@ -301,20 +279,7 @@ Resources:
                 Capabilities: CAPABILITY_IAM
               RunOrder: 3
             
-            - Name: ExecuteEcsChangeSet
-              ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Provider: CloudFormation
-                Version: '1'
-              Configuration:
-                ActionMode: CHANGE_SET_EXECUTE
-                ChangeSetName: ecschangeset
-                RoleArn: !GetAtt CloudFormationRole.Arn
-                StackName: !Sub ${AppName}-${Environment}-ecs
-                Capabilities: CAPABILITY_IAM
-              RunOrder: 4
-        
+ 
         - Name: Build
           Actions:
             - Name: CodeBuild
@@ -331,6 +296,44 @@ Resources:
                 ProjectName: !Ref CodeBuildProject
               RunOrder: 1
 
+        - Name: Deploy
+          Actions:
+            - Name: UpdateECSStack
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              InputArtifacts:
+                - Name: SourceCodeOutputArtifact
+              Configuration:
+                ActionMode: CHANGE_SET_REPLACE
+                Capabilities: CAPABILITY_NAMED_IAM
+                RoleArn: !GetAtt CloudFormationRole.Arn
+                StackName: !Sub ${AppName}-${Environment}-ecs
+                ChangeSetName: ecschangeset
+                TemplatePath: SourceCodeOutputArtifact::configuration/cloudformation/infra/ecs.yaml
+                ParameterOverrides: !Sub |
+                  {
+                    "Environment": "${Environment}",
+                    "AppName" : "${AppName}"
+                  }
+              RunOrder: 3
+
+            - Name: ExecuteEcsChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                ChangeSetName: ecschangeset
+                RoleArn: !GetAtt CloudFormationRole.Arn
+                StackName: !Sub ${AppName}-${Environment}-ecs
+                Capabilities: CAPABILITY_IAM
+              RunOrder: 1
+        
 
 Outputs:
   CodePipelineBucket:
