--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
       - NODE_PORT=$NODE_PORT
       - echo image uri
       - echo ${IMAGE_URI}
-      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION  | cut -c 1-7)
+      - IMAGE_TAG=latest
       - echo Image tag
       - echo ${IMAGE_TAG}
       - echo node image uri
@@ -39,7 +39,7 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Push image to ECR
-      - docker push "${IMAGE_URI}:${IMAGE_TAG}"
+      - docker push "${IMAGE_URI}":${IMAGE_TAG}"
       - printf '[{"name":"ihelp-server","imageUri":"%s"}]' ${IMAGE_URI}:${IMAGE_TAG} > imagedefinitions.json
       - cat imagedefinitions.json
 
