--- a/configuration/cloudformation/infra/ecs.yaml
+++ b/configuration/cloudformation/infra/ecs.yaml
@@ -118,7 +118,10 @@ Resources:
       ExecutionRoleArn: !ImportValue ECSTaskExecutionRole
       ContainerDefinitions:
         - Name: !Sub ${AppName}-${Environment}-container-def
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${AppName}-${Environment} 
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${AppName}-${Environment}
+          Environment:
+            - Name: NODE_PORT
+              Value: !Sub ContainerPort
           Essential: true
           PortMappings:
             - ContainerPort: !Ref ContainerPort
