--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,9 +17,14 @@ phases:
       - echo ${IMAGE_URI}
       - IMAGE_TAG=latest
       - echo Image tag
-      - echo ${IMAGE_TAG}
+      - APP_NAME=${APP_NAME}
+      - echo Building for application ${APP_NAME}
+      - ENV = ${ENV}
+      - echo Application Environment ${ENV}
       - echo node image uri
       - echo ${NODE_URI}
+      - CONTAINER_NAME=${APP_NAME}-${ENV}-container-def
+      - echo Using container path ${CONTAINER_NAME}
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --no-include-email --region $AWS_REGION)
       - echo Installing Mocha...
@@ -40,7 +45,7 @@ phases:
       - echo Build completed on `date`
       - echo Push image to ECR
       - docker push ${IMAGE_URI}:${IMAGE_TAG}
-      - printf '[{"name":"ihelp-server","imageUri":"%s"}]' ${IMAGE_URI}:${IMAGE_TAG} > imagedefinitions.json
+      - printf '[{"name":"%s","imageUri":"%s"}]' ${CONTAINER_NAME} ${IMAGE_URI}:${IMAGE_TAG} > imagedefinitions.json
       - cat imagedefinitions.json
 
 # Include only the files required for your application to run.
