use image tag for imageecr

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,9 +42,9 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Push image to ECR
-      #- docker push ${IMAGE_URI}:${IMAGE_TAG}
+      - docker push ${IMAGE_URI}:${IMAGE_TAG}
       - docker push ${IMAGE_URI}:latest
-      - printf '[{"name":"%s","imageUri":"%s"}]' ${CONTAINER_NAME} ${IMAGE_URI}:latest > imagedefinitions.json
+      - printf '[{"name":"%s","imageUri":"%s"}]' ${CONTAINER_NAME} ${IMAGE_URI}:${IMAGE_TAG} > imagedefinitions.json
       - cat imagedefinitions.json
 
 # Include only the files required for your application to run.
