use latest tag to in imagedefinitions

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -44,7 +44,7 @@ phases:
       - echo Push image to ECR
       - docker push ${IMAGE_URI}:${IMAGE_TAG}
       - docker push ${IMAGE_URI}:latest
-      - printf '[{"name":"%s","imageUri":"%s"}]' ${CONTAINER_NAME} ${IMAGE_URI}:${IMAGE_TAG} > imagedefinitions.json
+      - printf '[{"name":"%s","imageUri":"%s"}]' ${CONTAINER_NAME} ${IMAGE_URI}:latest > imagedefinitions.json
       - cat imagedefinitions.json
 
 # Include only the files required for your application to run.
