--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.922.0",
     "cors": "^2.8.5",
+    "dynamodb-geo": "^0.4.0",
+    "dynamodb-marshaler": "^2.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
   }
