--- a/configuration/cloudformation/infra/ecs.yaml
+++ b/configuration/cloudformation/infra/ecs.yaml
@@ -123,7 +123,7 @@ Resources:
             - Name: NODE_PORT
               Value: !Ref ContainerPort
             - Name: NODE_ENV
-              Value: !Sub ${Envirotnment}
+              Value: !Sub ${Environment}
             - Name: GOOGLE_API_KEY
               Value: AIzaSyCi-NeTHJ3F60Wd1oatZPuVOyRQo3BotxA
           Essential: true
