--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.922.0",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "dynamodb-geo": "^0.4.0",
     "dynamodb-marshaler": "^2.0.0",
     "express": "^4.17.1",
