--- a/configuration/cloudformation/infra/ecs.yaml
+++ b/configuration/cloudformation/infra/ecs.yaml
@@ -91,7 +91,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       HealthCheckEnabled: true
-      HealthCheckIntervalSeconds: 30
+      HealthCheckIntervalSeconds: 120
       HealthCheckPath: /health
       HealthCheckProtocol: HTTP
       HealthCheckTimeoutSeconds: 5
@@ -172,10 +172,10 @@ Resources:
       Conditions:
         - Field: path-pattern
           Values:
-            - "/api/v1/*"
+            - "/api/*"
       ListenerArn:
         Fn::ImportValue:
-          !Sub ${AppName}-${Environment}-PublicLoadBalancerListener
+          !Sub ${AppName}-${Environment}-PrivateLoadBalancerListener
       Priority: !Ref 'Priority'
 
 Outputs:
