--- a/configuration/cloudformation/infra/ecs.yaml
+++ b/configuration/cloudformation/infra/ecs.yaml
@@ -100,7 +100,7 @@ Resources:
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
       TargetType: ip
-      Name: !Sub ${AppName}-${Environment}-private-tr-grp
+      Name: !Sub ${AppName}-${Environment}-pri-tr
       Port: !Ref ContainerPort
       Protocol: HTTP
       UnhealthyThresholdCount: 2
