--- a/configuration/cloudformation/infra/ecs.yaml
+++ b/configuration/cloudformation/infra/ecs.yaml
@@ -164,8 +164,8 @@ Resources:
         - ContainerName: !Sub ${AppName}-${Environment}-container-def
           ContainerPort: !Ref ContainerPort
           TargetGroupArn: !Ref TargetGroup
-
-        - ContainerPort: !Ref ContainerPort
+        - ContainerName: !Sub ${AppName}-${Environment}-container-def
+          ContainerPort: !Ref ContainerPort
           TargetGroupArn: !Ref PrivateTargetGroup
 
   # Create a rule on the load balancer for routing traffic to the target group
