Infra for lambdas

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -34,6 +34,8 @@ phases:
       - echo Building images...
       - echo "Current working directory"
       - pwd
+      - echo "Packaging lambdas .. "
+      - make -B lambda
       - docker build . -t ${IMAGE_URI}:latest --build-arg NODE_IMAGE=${NODE_URI}:latest
       - echo Tag the docker image
       - docker tag ${IMAGE_URI}:latest ${IMAGE_URI}:${IMAGE_TAG}
