--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -357,6 +357,28 @@ Resources:
                 - Name: BuildOutputArtifact
               RunOrder: 1
 
+        - Name: Lambdas
+          Actions:
+            - Name: DeployLambdas
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: '1'
+              Configuration:
+                ActionMode: CREATE_UPDATE
+                RoleArn: !GetAtt CloudFormationRole.Arn
+                StackName: !Sub ${AWS::StackName} 
+                Capabilities: CAPABILITY_IAM
+                TemplatePath: SourceCodeOutputArtifact::output/lambda-out.yaml
+                ParameterOverrides: !Sub |
+                  {
+                    "Environment": "${Environment}",
+                    "AppName" : "${AppName}"
+                  }
+              RunOrder: 1
+ 
+
 Outputs:
   CodePipelineBucket:
     Description: S3 Bucket for Code Pipeline artifacts
