Dont' use profile in Make lamdbda for consistency with buildspec

--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -132,7 +132,7 @@ Resources:
           - Name: APP_NAME
             Type: PLAINTEXT
             Value: !Sub ${AppName}
-          - Name: ENV
+          - Name: Environment
             Type: PLAINTEXT
             Value: !Sub ${Environment}
         Image: aws/codebuild/standard:3.0
