--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,10 +18,10 @@ phases:
       - echo Image tag ${IMAGE_TAG}
       - APP_NAME=${APP_NAME}
       - echo Building for application ${APP_NAME}
-      - ENV=${ENV}
-      - echo Application Environment ${ENV}
+      - Environment=${Environment}
+      - echo Application Environment ${Environment}
       - echo node image uri ${NODE_URI}
-      - CONTAINER_NAME=${APP_NAME}-${ENV}-container-def
+      - CONTAINER_NAME=${APP_NAME}-${Environment}-container-def
       - echo Using container path ${CONTAINER_NAME}
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --no-include-email --region $AWS_REGION)
