--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -370,7 +370,7 @@ Resources:
                 RoleArn: !GetAtt CloudFormationRole.Arn
                 StackName: !Sub ${AWS::StackName} 
                 Capabilities: CAPABILITY_IAM
-                TemplatePath: SourceCodeOutputArtifact::output/lambda-out.yaml
+                TemplatePath: BuildOutputArtifact::output/lambda-out.yaml
                 ParameterOverrides: !Sub |
                   {
                     "Environment": "${Environment}",
