--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,6 +23,10 @@ phases:
       - echo node image uri ${NODE_URI}
       - CONTAINER_NAME=${APP_NAME}-${Environment}-container-def
       - echo Using container path ${CONTAINER_NAME}
+      - ArtifactsName=${APP_NAME}-${Environment}-output-artifacts
+      - echo "Create output directory for artifacts"
+      - mkdir -p output
+      - echo Using Artifacts name ${ArtifactsName}
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --no-include-email --region $AWS_REGION)
       - echo Installing Mocha...
@@ -34,8 +38,6 @@ phases:
       - echo Building images...
       - echo "Current working directory"
       - pwd
-      - echo "Create output directory for artifacts"
-      - mkdir -p output
       - echo "Packaging lambdas .. "
       - make -B lambda
       - docker build . -t ${IMAGE_URI}:latest --build-arg NODE_IMAGE=${NODE_URI}:latest
@@ -57,6 +59,6 @@ artifacts:
   base-directory: output
   discard-paths: yes
   type: zip
-  name: IhelpBuildOutputArtifacts
+  name: ${ArtifactsName}
   files:
     - '**/*'
