Add build input artifacts to lambda stage

--- a/configuration/cloudformation/pipeline/pipeline-prod.yaml
+++ b/configuration/cloudformation/pipeline/pipeline-prod.yaml
@@ -376,6 +376,8 @@ Resources:
                     "Environment": "${Environment}",
                     "AppName" : "${AppName}"
                   }
+              InputArtifacts:
+               - Name: BuildOutputArtifact 
               RunOrder: 1
  
 
