--- a/lambda/cfn.yaml
+++ b/lambda/cfn.yaml
@@ -14,6 +14,7 @@ Parameters:
   AppName:
     Type: String
     Description: "Name of the application"
+    Default: test
 
 Conditions:
   isProduction: !Equals [!Ref Environment, 'production']
@@ -34,7 +35,7 @@ Resources:
                 - lambda.amazonaws.com
             Action: sts:AssumeRole
       ManagedPolicyArns:
-            - arn:aws:iam::aws:policy/service role/AWSLambdaBasicExecutionRole
+            - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
             - arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess
 
   LambdaLogGroup:
@@ -45,14 +46,15 @@ Resources:
   HelloWorldFunction:
     Type: AWS::Lambda::Function
     Properties:
-      Description: Hello world api
-      FunctionName: !Sub ${AppName}-${Environment}-helloworldapi
+      Description: HelloWorld
+      FunctionName: !Sub ${AppName}-${Environment}-helloworld
       Runtime: nodejs14.x
       Role: !GetAtt LambdaRole.Arn
       Timeout: 500
       Environment:
-        NODE_ENV: !Sub ${Environment}
-      Code: src/HelloWorld/
+        Variables:
+            NODE_ENV: !Sub ${Environment}
+      Code: src/helloworld/.
       Handler: hello.HelloWorldHandler
 
 
