--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dynamodb-geo": "^0.4.0",
     "dynamodb-marshaler": "^2.0.0",
     "express": "^4.17.1",
+    "ihelp-lib": "github:ihelp-dev/ihelp-lib",
     "morgan": "^1.10.0"
   }
 }
